--- a/android_empon_ta/app/src/main/res/layout/activity_take_photo.xml
+++ b/android_empon_ta/app/src/main/res/layout/activity_take_photo.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -24,15 +23,35 @@
     <androidx.camera.view.PreviewView
         android:id="@+id/viewFinder"
         android:layout_width="0dp"
-        app:layout_constraintDimensionRatio="H,1:1"
         android:layout_height="0dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonCameraCapture"
+        app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.camera.view.PreviewView>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/buttonFlash"
+        android:layout_width="60dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="FlashToggle"
+        app:backgroundTint="#00FFFFFF"
+        app:icon="@drawable/ic_baseline_highlight_24"
+        app:iconGravity="textEnd"
+        app:iconPadding="0dp"
+        app:iconSize="@android:dimen/app_icon_size"
+        app:iconTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonCameraCapture"
+        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonCameraCapture"
+        app:layout_constraintTop_toTopOf="@+id/buttonCameraCapture" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
