--- a/android_empon_ta/app/src/main/res/layout/fragment_capture_result.xml
+++ b/android_empon_ta/app/src/main/res/layout/fragment_capture_result.xml
@@ -63,6 +63,7 @@
                     android:layout_height="wrap_content"
                     android:text="Akurasi: __%"
                     android:textSize="20sp"
+                    android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="@+id/textViewHasilDeteksi"
                     app:layout_constraintStart_toStartOf="@+id/textViewHasilDeteksi"
                     app:layout_constraintTop_toBottomOf="@+id/textViewHasilDeteksi" />
@@ -141,7 +142,7 @@
                     android:text="Manfaat :"
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="@+id/textView6"
-                    app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                    app:layout_constraintTop_toBottomOf="@+id/textViewNamaLatinCR" />
 
                 <TextView
                     android:id="@+id/textView3"
@@ -154,6 +155,32 @@
                     app:layout_constraintTop_toBottomOf="@+id/textViewManfaatCR" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutLowAcc"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/textView10"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="Jenis empon-empon tidak ditemukan. \n\n Pastikan gambar yang diunggah adalah gambar empon-empon dengan latar belakang putih."
+                android:textAlignment="center"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
             android:id="@+id/buttonCaptureAgain"
@@ -174,6 +201,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
