--- a/android_empon_ta/app/src/main/res/layout/fragment_detect.xml
+++ b/android_empon_ta/app/src/main/res/layout/fragment_detect.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.detect.DetectFragment">
 
+    <TextView
+        android:id="@+id/textViewUploadHint"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Ambil gambar empon-empon menggunakan latar belakang putih untuk meningkatkan akurasi prediksi"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewDetect"
+        app:layout_constraintStart_toStartOf="@+id/imageViewDetect"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewDetect" />
+
     <ImageView
         android:id="@+id/imageViewDetect"
         android:layout_width="0dp"
@@ -59,6 +71,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
