--- a/android_empon_ta/app/src/main/res/layout/fragment_about.xml
+++ b/android_empon_ta/app/src/main/res/layout/fragment_about.xml
@@ -24,24 +24,24 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="By: Jeremy Owen Lieyanto"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewAboutFace" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="58dp"
         android:text="s160418081@student.ubaya.ac.id"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonGoToFAQ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
@@ -70,12 +70,11 @@
 
     <ImageView
         android:id="@+id/imageViewAboutFace"
-        android:layout_width="256dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="64dp"
         android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/buttonGoToFAQ"
-        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintDimensionRatio="W,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
